# sportpulse

./: .gitignore  README.md  pyproject.toml  sportpulse.json
examples/: historical_export.csv  historical_export.json  historical_export.ndjson  historical_host_visitor.csv  matchups.json  season.csv  season.json
src/sportpulse/: __init__.py  __main__.py  aggregation_checks.py  api.py  board.py  boxscore.py  cli.py  config.py  elo.py  matchups.py  models.py  parsers.py  projections.py  ratings.py  rollup.py  schedule.py  schedule_cache.py  season.py  standings.py  stats.py
src/sportpulse/parsers/: __init__.py  box_score.py  coercion.py  csv_parser.py  format_detect.py  import_audit.py  json_parser.py  loader.py  ndjson_parser.py  schema.py  serialization.py  text_parser.py
tests/: test_aggregation_checks.py  test_aggregation_invariants_edge_cases.py  test_aggregation_reporting_edge_cases.py  test_api.py  test_board.py  test_boxscore.py  test_cli_import_boxscores.py  test_config.py  test_elo.py  test_examples.py  test_league_record_balance_edge_cases.py  test_matchups.py  test_parsers.py  test_parsers_ndjson.py  test_parsers_schema.py  test_parsers_us_dates.py  test_projections.py  test_ratings.py  test_rollup.py  test_rollup_edge_cases.py  test_schedule.py  test_schedule_cache.py  test_season.py  test_standings_edge_cases.py  test_standings_report.py  test_stats.py
